--- a/Industria 4.1/templates/bienvenida.html
+++ b/Industria 4.1/templates/bienvenida.html
@@ -1,8 +1,10 @@
+$def with(mensaje)
 <html>
     <head>
         <title>Bienvenida</title>
     </head>
     <body>
         <h1>Bienvenida</h1>
+        <h2>$mensaje</h2>
     </body>
 </html>
